# IoT-assignements

./: .gitignore  LICENSE  README.md
assignement-01/doc/: README.md
assignement-01/src/: btn_control.cpp  btn_control.h  game.cpp  game.h  interrupt.cpp  interrupt.h  lcd_control.cpp  lcd_control.h  setup.cpp  setup.h  src.ino  wait.cpp  wait.h
assignment-01/src/: btn_control.cpp  btn_control.h  interrupt.cpp  lcd_control.h  setup.cpp  setup.h  src.ino  wait.cpp
assignment-02/doc/: README.md
assignment-02/drone-hangar/: platformio.ini
assignment-02/drone-hangar/src/: config.h  main.cpp
assignment-02/drone-remote-unit/: .gitignore  README.md  config.py  main.py  pyproject.toml
assignment-02/drone-remote-unit/controllers/: serial_manager.py
assignment-02/drone-remote-unit/handlers/: message_serial_handler.py  message_ws_handler.py  serial_message_handler.py  websocket_message_handler.py
assignment-02/drone-remote-unit/model/: commands.py  state.py
assignment-02/drone-remote-unit/serial/: serial_manager.py
assignment-02/drone-remote-unit/serial_communication/: serial_manager.py
assignment-02/drone-remote-unit/static/: index.html  scripts.js
assignment-02/drone-remote-unit/static/css/: style.css
assignment-02/drone-remote-unit/static/js/: scripts.js
assignment-02/drone-remote-unit/websocket/: manager.py
assignment-03/CUS/: README.md  config.py  logger_config.py  main.py  pyproject.toml
assignment-03/DBS/: index.html
assignment-03/TMS/: platformio.ini
assignment-03/doc/: Tasks.drawio  assignement-03.drawio  report.md
first/: first.ino
(+65 files in other folders)
