[project]
name = "drone-remote-unit"
version = "0.1.0"
description = "A small FastAPI-based service that bridges WebSocket clients to a serial connected Arduino"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.122.0",
    "pyserial-asyncio>=0.6",
    "uvicorn[standard]>=0.38.0",
]
